@@ -5,20 +5,21 @@ import it.polimi.ingsw.message.client.ViewMessage;
 import it.polimi.ingsw.message.server.ServerMessage;
 import it.polimi.ingsw.model.cards.SmugglersCard;
 import it.polimi.ingsw.model.cards.exceptions.ForbiddenCallException;
+import it.polimi.ingsw.model.cards.utils.CombatZonePenalty;
 import it.polimi.ingsw.model.client.card.ClientAwaitConfirmCardStateDecorator;
 import it.polimi.ingsw.model.client.card.ClientBaseCardState;
 import it.polimi.ingsw.model.client.card.ClientCardState;
+import it.polimi.ingsw.model.client.card.ClientEnemyCardStateDecorator;
 import it.polimi.ingsw.model.client.state.ClientState;
 import it.polimi.ingsw.model.components.exceptions.IllegalTargetException;
 import it.polimi.ingsw.model.player.Player;
-import it.polimi.ingsw.model.player.PlayerColor;
 import it.polimi.ingsw.model.player.ShipCoords;
 import it.polimi.ingsw.model.state.VoyageState;
 import it.polimi.ingsw.utils.Logger;
 import it.polimi.ingsw.utils.LoggerLevel;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.List;
 
 public class SmugglersAnnounceState extends CardState {
 
@@ -61,8 +62,15 @@ public class SmugglersAnnounceState extends CardState {
 
 	@Override
 	public ClientCardState getClientCardState() {
-		ArrayList<PlayerColor> awaiting = new ArrayList<>(Collections.singletonList(this.list.getFirst().getColor()));
-		return new ClientAwaitConfirmCardStateDecorator(new ClientBaseCardState(this.card.getId()), awaiting);
+		return new ClientEnemyCardStateDecorator(
+				new ClientAwaitConfirmCardStateDecorator(
+						new ClientBaseCardState(
+								this.getClass().getSimpleName(),
+								card.getId()),
+						new ArrayList<>(List.of(this.list.getFirst().getColor()))),
+				this.card.getPower(),
+				CombatZonePenalty.CARGO,
+				this.card.getCargoPenalty());
 	}
 
 	@Override
